# gymrat

./: .gitignore  README.md  docker-compose.yml  exercises.bson  exercises.metadata.json
backend/: Dockerfile  main.py  pyproject.toml
backend/src/: main.py
backend/src/api/: authenticate.py  calendar.py  endpoints.py  exercises.py  users.py  workouts.py
backend/src/db/: exercises.json  idb.py  inmemorydb.py  mongodb.py  tmp.py
backup/: calendars.bson  calendars.metadata.json  exercises.bson  exercises.metadata.json  users.bson  users.metadata.json  workouts.bson  workouts.metadata.json
frontend/: Dockerfile  docker-compose.yaml  package-lock.json  package.json
frontend/src/: App.js  Header.js  index.js  theme.js
frontend/src/components/: Calendar.jsx  Exercises.js  Exercises.jsx  Footer.js  Footer.jsx  Home.js  Home.jsx  LoginForm.jsx  Navbar.js  Navbar.jsx  WorkoutSchedules.jsx  Workouts.jsx
