[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Lukasz <lwilanskiwilan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
motor = "^3.4.0"
fastapi-sessions = "^0.3.2"
cryptography = "^42.0.6"
pydantic = {extras = ["email"], version = "^2.7.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
